setup basic template

--- a/src/main/resources/prop/jdbc.properties
+++ b/src/main/resources/prop/jdbc.properties
@@ -1,8 +1,8 @@
 
 #### data source ######
 jdbc.basic.driver=org.mariadb.jdbc.Driver
-jdbc.basic.url=jdbc:mariadb://127.0.0.1:3306/art_db?characterEncoding=utf-8
-jdbc.basic.username=art_user
-jdbc.basic.password=art000
+jdbc.basic.url=jdbc:mariadb://127.0.0.1:3306/uni_db?characterEncoding=utf-8
+jdbc.basic.username=uni_user
+jdbc.basic.password=uni000
 jdbc.basic.pingQuery=select 1
 
