--- a/build.gradle
+++ b/build.gradle
@@ -58,16 +58,13 @@ dependencies {
     compile "org.springframework:spring-context:${springVersion}"
     compile "org.springframework:spring-web:${springVersion}"
     compile "org.springframework:spring-jdbc:${springVersion}"
-    compile "org.springframework:spring-aop:${springVersion}"
-    compile "org.springframework:aspectjrt:${springVersion}"
-    compile "org.springframework:aspectjweaver:${springVersion}"
 
     // mybatis
     compile 'org.mybatis:mybatis:3.3.1'
     compile 'org.mybatis:mybatis-spring:1.2.4'
 
     // JDBC driver
-   // compile 'org.mariadb.jdbc:mariadb-java-client:1.3.6'
+    compile 'org.mariadb.jdbc:mariadb-java-client:1.3.6'
     compile 'mysql:mysql-connector-java:5.1.38'
    // compile 'com.microsoft.jdbc:sqljdbc:4.0'
    // compile 'log:log4sql:7.8.0'
