--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
     <context-param>
 	    <param-name>contextConfigLocation</param-name>
 	    <param-value>
-	        classpath:applicationContext.xml
+	        classpath:applicationRoot.xml
 	    </param-value>
 	</context-param>
 	
